l5-operator/config/resources/bestie-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bestie
  name: bestie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bestie
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bestie
    spec:
      containers:
      - image: quay.io/mkong/bestiev2:1.1
        name: bestie
        ports:
        - name: http
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /foster
            port: 8000
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /foster
            port: 8000
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds: 15
