l5-operator/config/resources/bestie-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bestie
    name: bestie-service
  name: bestie-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: bestie
  type: LoadBalancer
