l5-operator/config/resources/bestie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bestie-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foster"
        backend:
          service:
            name: pgo
            port:
              number: 80
  - host: "*.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: service2
            port:
              number: 80
